ADD: add api getRoles