@@ -1,5 +1,6 @@
 package com.minswap.hrms.configuration;
 
+import com.minswap.hrms.controller.TimeCheckController;
 import com.minswap.hrms.security.RestAuthenticationEntryPoint;
 import com.minswap.hrms.security.TokenAuthenticationFilter;
 import com.minswap.hrms.security.oauth2.HttpCookieOAuth2AuthorizationRequestRepository;
@@ -19,6 +20,7 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static com.minswap.hrms.constants.CommonConstant.*;
@@ -35,7 +37,7 @@ import static com.minswap.hrms.constants.CommonConstant.*;
 public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
     private final OAuth2UserServiceImpl oAuth2UserService;
     private static final String LOGIN_PATH = "https://ms-hrms.software/login";
-    private static final List<String> ALLOWED_METHOD = List.of(
+    private static final List<String> ALLOWED_METHOD = Arrays.asList(
             HttpMethod.GET.name(),
             HttpMethod.POST.name(),
             HttpMethod.DELETE.name(),
@@ -46,7 +48,7 @@ public class WebSecurityConfig extends WebSecurityConfigurerAdapter {
     private static final String[] MANAGER_URL_PATTERNS = {MANAGER + "/**"};
     private static final String[] HR_URL_PATTERNS = {HR + "/**"};
     private static final String[] IT_SUPPORT_URL_PATTERNS = {ITSUPPORT + "/**"};
-    private static final String[] WHITE_LIST_URL_PATTERNS = {"/oauth2/**"};
+    private static final String[] WHITE_LIST_URL_PATTERNS = {"/oauth2/**", TimeCheckController.TIME_CHECK + "/**", "push-notifications/**"};
     @Override
     protected void configure(HttpSecurity http) throws Exception {
         http
